--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,24 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+$color-darker-salmon: #f33f2e;
 $color-salmon: #f69b92;
 $color-black: #231f20;
 $color-grey: #d1d3d4;
 
 body {
   margin: 0;
-  background-color: #fddbd4;
-  font-family: "Helvetica", sans-serif;
+  background-color: #f9f3f1;
+  font-family: "Barlow", sans-serif;
 
   min-height: 100vh;
+}
+
+a {
+  text-decoration: none;
 }
 
 .navbar {
   width: 100vw;
   height: 100px;
   background-color: white;
-  position: relative; // Use relative positioning
+  position: relative;
   font-weight: bold;
   z-index: 10;
+
+  a {
+    color: $color-black;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
 
   .navbar-left {
     position: absolute;
@@ -256,5 +270,56 @@ footer {
 
   .footer-right {
     width: 50%;
+  }
+}
+
+.post-container {
+  width: 50%;
+  margin: 5em auto;
+
+  @media (max-width: 768px) {
+    width: 92%;
+  }
+
+  .sections {
+    color: $color-darker-salmon;
+    font-weight: bold;
+
+    .section {
+      position: relative; // Required for the ::after pseudo-element
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -2px; // Adjust as needed
+        width: 100%;
+        height: 3px; // Thicker underline
+        background-color: $color-darker-salmon;
+        transform: scaleX(0);
+        transform-origin: bottom right;
+        transition: transform 0.3s ease-out; // Ensure transition is here
+      }
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &:hover::after {
+        transform: scaleX(1);
+        transform-origin: bottom left;
+      }
+    }
+  }
+
+  .authors {
+    margin-top: 1em;
+    font-size: 1.3em;
+  }
+
+  .post-content {
+    font-size: 1.1em;
+    margin-top: 3em;
+    text-wrap: pretty;
   }
 }
