--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -124,82 +124,6 @@ a {
   }
 }
 
-.carousel {
-  width: 100%;
-  height: 50vh;
-  position: relative;
-  overflow: hidden;
-  border-radius: 0 0 100px 100px;
-
-  .carousel-arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 2em;
-    color: white;
-    cursor: pointer;
-    z-index: 1;
-
-    &.left-arrow {
-      left: 10px;
-    }
-
-    &.right-arrow {
-      right: 10px;
-    }
-  }
-
-  .carousel-slides {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-    height: 100%;
-  }
-
-  .carousel-slide {
-    position: relative;
-    min-width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-    color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    font-size: 2em;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(
-        0,
-        0,
-        0,
-        0.5
-      ); // Adjust the color and opacity as needed
-      z-index: 0; // Ensure the overlay is behind the text
-    }
-
-    > * {
-      position: relative;
-      z-index: 1;
-    }
-  }
-
-  .carousel-indicators {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-    font-size: 1em;
-  }
-}
-
 .central-menu {
   display: flex;
   flex-direction: row;
@@ -266,6 +190,7 @@ footer {
   font-weight: bold;
   display: flex;
   justify-content: space-between;
+  margin-top: 5vh;
 
   .footer-left {
     width: 50%;
@@ -330,28 +255,6 @@ footer {
     text-wrap: pretty;
   }
 
-  .horizontal-line-container {
-    display: flex;
-    align-items: center; // Vertically center the lines
-    width: 100%;
-    margin-top: 2em; // Adjust as needed for spacing
-  }
-
-  .horizontal-line {
-    height: 5px; // Base thickness for the black part
-  }
-
-  .black-part {
-    width: 70%;
-    background-color: $color-black;
-  }
-
-  .salmon-part {
-    width: 30%;
-    height: 10px; // Thicker for the salmon part
-    background-color: $color-salmon;
-  }
-
   ul {
     list-style: none;
     padding: 0;
@@ -381,12 +284,15 @@ footer {
 
 .newsletter {
   text-align: center;
-  margin: 6em 0;
+  margin: 2em 0;
+  background-color: #f75647;
+  padding: 10vh;
 
   h2 {
     font-size: 2em;
-    color: $color-black;
-    margin-bottom: 1em;
+    color: white;
+    margin-top: 0;
+    text-transform: uppercase;
   }
 
   form {
@@ -417,5 +323,228 @@ footer {
         background-color: $color-darker-salmon;
       }
     }
+  }
+}
+
+.card-carousel {
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  height: 40vh;
+  margin: 0 auto;
+
+  .carousel-container {
+    display: flex;
+    height: 100%;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .carousel-slide {
+    width: 25%; /* 4.5 cards on desktop */
+    height: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .slide-content {
+    height: 100%;
+    background-color: #ffffff;
+  }
+
+  .slide-image {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+  }
+
+  .slide-text {
+    height: 30%;
+    display: flex;
+  }
+
+  .carousel-button {
+    position: absolute;
+    bottom: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 10;
+  }
+
+  .carousel-button.left {
+    left: 10px;
+  }
+
+  .carousel-button.right {
+    right: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .carousel-slide {
+    min-width: 66.66%; /* 1.5 cards on mobile */
+  }
+}
+
+.grids {
+  .div1,
+  .div2,
+  .div3,
+  .div4,
+  .div5,
+  .div6,
+  .div7 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: start;
+    overflow: hidden;
+    cursor: pointer;
+    padding: 5px;
+  }
+
+  img {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+    object-position: center;
+    margin-bottom: 10px;
+
+    transition: filter 0.3s ease;
+
+    &:hover {
+      filter: brightness(0.8) sepia(1) hue-rotate(-50deg);
+    }
+  }
+
+  .article-info {
+    .article-title {
+      text-transform: uppercase;
+      color: $color-black;
+      font-weight: bold;
+
+      width: 100%;
+      flex-grow: 1;
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: $color-darker-salmon !important;
+      }
+    }
+
+    .article-sections {
+      color: $color-darker-salmon;
+      text-transform: uppercase;
+
+      font-weight: bold;
+      text-align: start;
+    }
+
+    .article-author {
+      font-size: 1.2em;
+    }
+  }
+}
+
+.big-grid {
+  height: 100vh;
+  width: 70vw;
+  margin: 0 auto;
+  margin-top: 10vh;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(11, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 0px;
+
+  .div1 {
+    .article-info {
+      .article-title {
+        font-size: 2.5em;
+      }
+    }
+  }
+
+  .div2 {
+    .article-info {
+      .article-title {
+        font-size: 1.5em;
+      }
+    }
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 8 / 5;
+  }
+  .div2 {
+    grid-area: 1 / 5 / 8 / 7;
+  }
+  .div3 {
+    grid-area: 8 / 1 / 12 / 3;
+  }
+  .div4 {
+    grid-area: 8 / 3 / 12 / 5;
+  }
+  .div5 {
+    grid-area: 8 / 5 / 10 / 7;
+  }
+  .div6 {
+    grid-area: 10 / 5 / 12 / 7;
+  }
+}
+.small-grid {
+  width: 70vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 0px;
+
+  .div1,
+  .div1 {
+    grid-area: 1 / 1 / 3 / 3;
+  }
+  .div2 {
+    grid-area: 3 / 1 / 5 / 3;
+  }
+  .div3 {
+    grid-area: 1 / 3 / 3 / 5;
+  }
+  .div4 {
+    grid-area: 3 / 3 / 5 / 5;
+  }
+  .div5 {
+    grid-area: 1 / 5 / 3 / 7;
+  }
+  .div6 {
+    grid-area: 3 / 5 / 5 / 7;
+  }
+}
+
+.horizontal-line-container {
+  display: flex;
+  align-items: center; // Vertically center the lines
+  width: 100%;
+  margin-top: 2em; // Adjust as needed for spacing
+
+  .horizontal-line {
+    height: 5px; // Base thickness for the black part
+  }
+
+  .black-part {
+    width: 70%;
+    background-color: $color-black;
+  }
+
+  .salmon-part {
+    width: 30%;
+    height: 10px; // Thicker for the salmon part
+    background-color: $color-salmon;
   }
 }
