--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -19,12 +19,12 @@ a {
 }
 
 .navbar {
+  z-index: 15;
   width: 100vw;
   height: 100px;
   background-color: white;
   position: relative;
   font-weight: bold;
-  z-index: 10;
 
   a {
     color: $color-black;
@@ -284,7 +284,6 @@ footer {
 
 .newsletter {
   text-align: center;
-  margin: 2em 0;
   background-color: #f75647;
   padding: 10vh;
 
@@ -431,9 +430,28 @@ footer {
       width: 100%;
       flex-grow: 1;
       transition: color 0.3s ease;
+      position: relative;
 
       &:hover {
-        color: $color-darker-salmon !important;
+        color: $color-darker-salmon; // Change color on hover
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -2px; // Adjust as needed
+        width: 100%;
+        height: 3px; // Thicker underline
+        background-color: $color-darker-salmon;
+        transform: scaleX(0);
+        transform-origin: bottom right;
+        transition: transform 0.3s ease-out; // Ensure transition is here
+      }
+
+      &:hover::after {
+        transform: scaleX(1);
+        transform-origin: bottom left;
       }
     }
 
@@ -456,6 +474,8 @@ footer {
   width: 70vw;
   margin: 0 auto;
   margin-top: 10vh;
+  margin-bottom: 7vh;
+
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(11, 1fr);
@@ -501,6 +521,7 @@ footer {
   width: 70vw;
   margin: 0 auto;
   display: grid;
+  margin-top: 7vh;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(4, 1fr);
   grid-column-gap: 20px;
@@ -547,4 +568,55 @@ footer {
     height: 10px; // Thicker for the salmon part
     background-color: $color-salmon;
   }
+}
+
+.left-column {
+  width: 15%;
+
+  padding-left: 20px;
+  background-color: #ffe5e2;
+  color: $color-black; // Ensure text is readable
+  z-index: 20;
+
+  ul {
+    margin-top: 7vh;
+    list-style: none; // Remove default list styling
+    padding: 0;
+  }
+
+  li {
+    margin: 1em 0;
+    font-weight: bold; // Make section titles bold
+    transition: color 0.3s ease;
+    cursor: pointer;
+    text-transform: uppercase;
+    position: relative;
+
+    &:hover {
+      color: $color-darker-salmon; // Change color on hover
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -2px; // Adjust as needed
+      width: 100%;
+      height: 3px; // Thicker underline
+      background-color: $color-darker-salmon;
+      transform: scaleX(0);
+      transform-origin: bottom right;
+      transition: transform 0.3s ease-out; // Ensure transition is here
+    }
+
+    &:hover::after {
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+  }
+}
+
+.no-decoration {
+  text-decoration: none !important;
+  color: $color-black; // Ensure text is readable
 }
