--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,6 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+/* 1. Use a more-intuitive box-sizing model */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* 2. Remove default margin */
+* {
+  margin: 0;
+}
+
 $color-darker-salmon: #f33f2e;
 $color-salmon: #f69b92;
 $color-black: #231f20;
@@ -190,7 +202,7 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 1em;
+  padding: 4em 1em;
   background-color: $color-black;
   color: white;
   width: 100%;
@@ -203,7 +215,6 @@ footer {
 
   @media (max-width: 768px) {
     flex-direction: column;
-    padding: 0;
     .footer-left,
     .footer-right {
       margin-bottom: 1em;
@@ -304,6 +315,8 @@ footer {
 
   h2 {
     font-size: 2em;
+
+    margin-bottom: 1em;
     color: white;
     margin-top: 0;
     text-transform: uppercase;
@@ -642,8 +655,8 @@ footer {
 
 @media (max-width: 800px) {
   .main-column {
-    width: 92%;
-    margin: 0 auto;
+    width: 100%;
+    margin: 0 3vw;
     justify-content: center;
   }
   .left-column {
