--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -13,6 +13,11 @@
   margin: 0;
 }
 
+p {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 $color-darker-salmon: #f33f2e;
 $color-salmon: #f69b92;
 $color-black: #231f20;
@@ -306,6 +311,10 @@ footer {
       margin-top: 0.5em;
     }
   }
+}
+
+.logo-link {
+  cursor: pointer;
 }
 
 .newsletter {
