--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -42,7 +42,7 @@ a {
 .navbar {
   z-index: 15;
   width: 100vw;
-  height: 100px;
+  height: 150px;
   background-color: white;
   position: relative;
   font-weight: bold;
@@ -60,6 +60,16 @@ a {
     left: 2em;
     top: 50%;
     transform: translateY(-50%); // Center vertically
+
+    .hamburger-icon {
+      display: none; // Hide by default
+    }
+
+    @media (max-width: 800px) {
+      .hamburger-icon {
+        display: block; // Show on mobile
+      }
+    }
   }
 
   .navbar-center {
@@ -96,6 +106,7 @@ a {
     display: flex; // Use flexbox for horizontal alignment
     align-items: center; // Align items vertically in the center
     cursor: pointer;
+    font-size: 1.2em;
 
     .link {
       margin-right: 1em; // Add some space between the link and the search
@@ -510,7 +521,7 @@ footer {
   height: 100vh;
   width: 70vw;
   margin: 0 auto;
-  margin-top: 10vh;
+  margin-top: 4vh;
   margin-bottom: 7vh;
 
   display: grid;
@@ -609,6 +620,14 @@ footer {
 
 .left-column {
   width: 15%;
+
+  &.visible {
+    display: block; // Show the sidebar when visible
+  }
+
+  @media (max-width: 800px) {
+    display: none; // Hide by default on mobile
+  }
 
   padding-left: 20px;
   background-color: #ffe5e2;
