--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -77,6 +77,19 @@ a {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%); // Center both horizontally and vertically
+
+    .logo-link {
+      display: flex;
+    }
+    .logo-img {
+      margin: 0 auto;
+    }
+
+    .logo-text {
+      text-align: center;
+      font-size: 1.2em; // Adjust the font size as needed
+      color: $color-black; // Use the defined color variable
+    }
     button {
       background-color: $color-black;
 
@@ -617,18 +630,8 @@ footer {
     background-color: $color-salmon;
   }
 }
-
 .left-column {
   width: 15%;
-
-  &.visible {
-    display: block; // Show the sidebar when visible
-  }
-
-  @media (max-width: 800px) {
-    display: none; // Hide by default on mobile
-  }
-
   padding-left: 20px;
   background-color: #ffe5e2;
   color: $color-black; // Ensure text is readable
@@ -638,37 +641,86 @@ footer {
     margin-top: 7vh;
     list-style: none; // Remove default list styling
     padding: 0;
+
+    li {
+      margin: 1em 0;
+      font-weight: bold; // Make section titles bold
+      text-transform: uppercase;
+      position: relative;
+
+      ul {
+        margin-top: 0.5em; // Add some space above the nested list
+        padding-left: 1em; // Indent the nested list
+        list-style: none; // Remove default list styling
+
+        li {
+          margin: 0.5em 0; // Adjust margin for nested list items
+          font-weight: normal; // Normal weight for nested items
+          text-transform: uppercase;
+
+          transition: color 0.3s ease;
+          cursor: pointer;
+
+          &:hover {
+            color: $color-salmon; // Different hover color for nested items
+          }
+
+          &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: -2px; // Adjust as needed
+            width: 100%;
+            height: 3px; // Thicker underline
+            background-color: $color-darker-salmon;
+            transform: scaleX(0);
+            transform-origin: bottom right;
+            transition: transform 0.3s ease-out; // Ensure transition is here
+          }
+
+          &:hover::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+          }
+        }
+      }
+
+      // Apply hover effects to list items without nested lists
+      &:not(:has(ul)) {
+        transition: color 0.3s ease;
+        cursor: pointer;
+
+        &:hover {
+          color: $color-darker-salmon; // Change color on hover
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: -2px; // Adjust as needed
+          width: 100%;
+          height: 3px; // Thicker underline
+          background-color: $color-darker-salmon;
+          transform: scaleX(0);
+          transform-origin: bottom right;
+          transition: transform 0.3s ease-out; // Ensure transition is here
+        }
+
+        &:hover::after {
+          transform: scaleX(1);
+          transform-origin: bottom left;
+        }
+      }
+    }
   }
 
-  li {
-    margin: 1em 0;
-    font-weight: bold; // Make section titles bold
-    transition: color 0.3s ease;
-    cursor: pointer;
-    text-transform: uppercase;
-    position: relative;
+  &.visible {
+    display: block; // Show the sidebar when visible
+  }
 
-    &:hover {
-      color: $color-darker-salmon; // Change color on hover
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: -2px; // Adjust as needed
-      width: 100%;
-      height: 3px; // Thicker underline
-      background-color: $color-darker-salmon;
-      transform: scaleX(0);
-      transform-origin: bottom right;
-      transition: transform 0.3s ease-out; // Ensure transition is here
-    }
-
-    &:hover::after {
-      transform: scaleX(1);
-      transform-origin: bottom left;
-    }
+  @media (max-width: 800px) {
+    display: none; // Hide by default on mobile
   }
 }
 
