--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -242,6 +242,21 @@ footer {
     text-align: center;
   }
 
+  .contact-button {
+    background-color: $color-salmon;
+    color: white;
+    border: none;
+    padding: 0.5em 1em;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: $color-darker-salmon;
+    }
+  }
+
   @media (max-width: 768px) {
     flex-direction: column;
     .footer-left,
@@ -579,11 +594,12 @@ footer {
   }
 }
 .small-grid {
-  width: 70vw;
+  width: 80vw;
   margin: 0 auto;
   display: grid;
-  margin-top: 2vh;
-  grid-template-columns: repeat(6, 1fr);
+  margin-top: 7vh;
+  margin-bottom: 7vh;
+  grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(4, 1fr);
   grid-column-gap: 20px;
   grid-row-gap: 0px;
@@ -606,6 +622,12 @@ footer {
   }
   .div6 {
     grid-area: 3 / 5 / 5 / 7;
+  }
+  .div7 {
+    grid-area: 1 / 7 / 3 / 9;
+  }
+  .div8 {
+    grid-area: 3 / 7 / 5 / 9;
   }
 }
 
@@ -769,9 +791,9 @@ footer {
   .small-grid {
     margin-top: 3vh;
     width: 92%;
+    margin-bottom: 3vh;
   }
 
   .newsletter {
-    margin-top: 2em; // Add margin to separate from the grid
   }
 }
