--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -65,7 +65,7 @@ a {
       display: none; // Hide by default
     }
 
-    @media (max-width: 800px) {
+    @media (max-width: 768px) {
       .hamburger-icon {
         display: block; // Show on mobile
       }
@@ -275,6 +275,11 @@ footer {
     margin: 1em auto;
   }
 
+  .section-title {
+    text-transform: uppercase;
+    color: $color-darker-salmon;
+  }
+
   .post-title {
     text-transform: uppercase;
   }
@@ -310,6 +315,11 @@ footer {
   .sections {
     color: $color-darker-salmon;
     font-weight: bold;
+
+    a {
+      color: inherit; // Reset color styles for all links
+      text-decoration: none;
+    }
 
     .section {
       position: relative; // Required for the ::after pseudo-element
@@ -356,7 +366,7 @@ footer {
 
   li {
     margin: 1em 0;
-    padding: 1em;
+    padding: 1em 0em;
 
     a {
       color: $color-black;
@@ -370,7 +380,7 @@ footer {
     }
 
     .author {
-      font-size: 0.9em;
+      font-size: 1.1em;
       margin-top: 0.5em;
     }
   }
@@ -683,6 +693,13 @@ footer {
   color: $color-black; // Ensure text is readable
   z-index: 20;
 
+  .temas-centrais {
+    padding-right: 0 !important;
+    li {
+      padding-right: 20px;
+    }
+  }
+
   ul {
     margin-top: 7vh;
     list-style: none; // Remove default list styling
@@ -693,6 +710,7 @@ footer {
       font-weight: bold; // Make section titles bold
       text-transform: uppercase;
       position: relative;
+      padding-right: 20px;
 
       ul {
         margin-top: 0.5em; // Add some space above the nested list
@@ -714,7 +732,7 @@ footer {
           &::after {
             content: "";
             position: absolute;
-            left: 0;
+            right: 0;
             bottom: -2px; // Adjust as needed
             width: 100%;
             height: 3px; // Thicker underline
@@ -743,7 +761,7 @@ footer {
         &::after {
           content: "";
           position: absolute;
-          left: 0;
+          right: 0;
           bottom: -2px; // Adjust as needed
           width: 100%;
           height: 3px; // Thicker underline
@@ -765,8 +783,11 @@ footer {
     display: block; // Show the sidebar when visible
   }
 
-  @media (max-width: 800px) {
+  @media (max-width: 768px) {
     display: none; // Hide by default on mobile
+    &.visible {
+      display: block; // Show the sidebar on mobile if visible
+    }
   }
 }
 
@@ -779,7 +800,7 @@ footer {
   width: 85%;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .main-column {
     width: 100%;
     margin: 0 3vw;
@@ -819,5 +840,29 @@ footer {
   }
 
   .newsletter {
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .left-column {
+    width: 22%;
+  }
+
+  .main-column {
+    width: 78%;
+  }
+
+  .small-grid {
+    width: 90vw;
+  }
+
+  .post-container {
+    width: 80vw;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1300px) {
+  .post-container {
+    width: 70vw;
   }
 }
