--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -693,6 +693,20 @@ footer {
   color: $color-black; // Ensure text is readable
   z-index: 20;
 
+  @media (max-width: 768px) {
+    position: absolute; // Position it absolutely
+    top: 150px; // Align it to the top
+    left: 0; // Align it to the left
+    width: 70%; // Full width to cover the content
+    height: 100%; // Full height to cover the viewport
+    display: none; // Hide by default on mobile
+    z-index: 30; // Ensure it appears above other elements
+
+    &.visible {
+      display: block; // Show the sidebar on mobile if visible
+    }
+  }
+
   .temas-centrais {
     padding-right: 0 !important;
     li {
@@ -800,11 +814,19 @@ footer {
   width: 85%;
 }
 
+@media (min-width: 769px) {
+  .hamburger-react {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) {
   .main-column {
     width: 100%;
     margin: 0 3vw;
     justify-content: center;
+    position: relative; // Ensure it stays in place
+    z-index: 10; // Lower z-index than the sidebar
   }
   .left-column {
     display: none; // Hide the sidebar on phones
@@ -837,9 +859,6 @@ footer {
     margin-top: 3vh;
     width: 92%;
     margin-bottom: 3vh;
-  }
-
-  .newsletter {
   }
 }
 
