--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -47,8 +47,10 @@ a {
   z-index: 15;
   width: 100vw;
   height: 150px;
+
   background-color: white;
-  position: relative;
+  position: fixed;
+  top: 0;
   font-weight: bold;
 
   a {
@@ -65,15 +67,8 @@ a {
     top: 50%;
     transform: translateY(-50%); // Center vertically
 
-    .hamburger-icon {
-      display: none; // Hide by default
-    }
-
     @media (max-width: 768px) {
       left: 1em;
-      .hamburger-icon {
-        display: block; // Show on mobile
-      }
     }
   }
 
@@ -694,29 +689,8 @@ footer {
     background-color: $color-salmon;
   }
 }
-.left-column {
-  width: 15%;
-  padding-left: 20px;
-  background-color: #ffe5e2;
-  color: $color-black; // Ensure text is readable
-  z-index: 20;
-  transition: transform 0.3s ease;
 
-  @media (max-width: 768px) {
-    position: absolute; // Position it absolutely
-    top: 150px; // Align it to the top
-    left: 0; // Align it to the left
-    width: 70%; // Full width to cover the content
-    height: 100%; // Full height to cover the viewport
-    z-index: 30; // Ensure it appears above other elements
-    transform: translateX(-100%); // Ensure it starts off-screen on mobile
-
-    &.visible {
-      display: block; // Show the sidebar on mobile if visible
-      transform: translateX(0); // Slide into view on mobile
-    }
-  }
-
+.side-bar-wrapper {
   .temas-centrais {
     padding-right: 0 !important;
     li {
@@ -807,6 +781,57 @@ footer {
   }
 }
 
+.side-bar-fade {
+  width: 100%;
+  height: 100%;
+  position: fixed; // Position it absolutely
+  top: 150px; // Align it to the top
+  left: 0; // Align it to the left
+  z-index: 30;
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+
+  &.visible {
+    background-color: #3a3939a5;
+  }
+
+  &:not(.visible) {
+    pointer-events: none;
+  }
+}
+
+.left-column-navbar {
+  transition: transform 0.3s ease;
+  background-color: #ffe5e2;
+  width: 15%;
+  padding-left: 20px;
+  position: absolute; // Position it absolutely
+  top: 0; // Align it to the top
+  left: 0; // Align it to the left
+  height: 100%; // Full height to cover the viewport
+  transform: translateX(-100%); // Ensure it starts off-screen on mobile
+
+  &.visible {
+    transform: translateX(0); // Slide into view on mobile
+  }
+
+  @media (max-width: 768px) {
+    width: 70%; // Full width to cover the content
+  }
+}
+
+.left-column {
+  width: 15%;
+  padding-left: 20px;
+  background-color: #ffe5e2;
+  color: $color-black; // Ensure text is readable
+  z-index: 10;
+
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+
 .no-decoration {
   text-decoration: none !important;
   color: $color-black; // Ensure text is readable
@@ -814,12 +839,6 @@ footer {
 
 .main-column {
   width: 85%;
-}
-
-@media (min-width: 769px) {
-  .hamburger-react {
-    display: none;
-  }
 }
 
 @media (max-width: 768px) {
