--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -128,6 +128,27 @@ a {
     .search {
       display: flex; // Ensure the search input and icon are inline
       align-items: center; // Center the input and icon vertically
+
+      input {
+        width: 0;
+        padding: 0;
+        border: none;
+        outline: none;
+        transition: width 0.3s ease, padding 0.3s ease;
+        overflow: hidden;
+
+        &[type="text"] {
+          font-size: 1em;
+          border-bottom: 1px solid $color-black;
+        }
+
+        &:not(:placeholder-shown),
+        &.visible {
+          width: 200px;
+          padding: 5px;
+        }
+      }
+
       @media (max-width: 768px) {
         display: none;
       }
