--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -47,6 +47,7 @@ a {
   z-index: 15;
   width: 100vw;
   height: 150px;
+  box-shadow: 1px 0px 5px #333; // Small bottom shadow
 
   background-color: white;
   position: fixed;
