--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -22,7 +22,7 @@ $color-darker-salmon: #f33f2e;
 $color-salmon: #f69b92;
 $color-black: #231f20;
 $color-grey: #d1d3d4;
-$navbar-height: 100px;
+$navbar-height: 120px;
 $navbar-height-mobile: 120px;
 
 * {
@@ -100,6 +100,11 @@ a {
     }
     .logo-img {
       margin: 0 auto;
+    }
+
+    .homepage-logo {
+      width: 500px; // Adjust the width as needed
+      height: auto; // Maintain aspect ratio
     }
 
     .logo-text {
@@ -432,6 +437,16 @@ footer {
     font-size: 1.2em;
     line-height: 1.7em;
     text-wrap: pretty;
+
+    li {
+      margin: 0;
+      padding: 0;
+    }
+
+    h2 {
+      margin-top: 1em;
+      margin-bottom: 0.5em;
+    }
 
     @media (max-width: 768px) {
       margin-top: 0;
@@ -766,6 +781,12 @@ footer {
   }
 }
 
+.horizontal-separator {
+  height: 2px;
+  background-color: $color-darker-salmon;
+  margin-bottom: 1em;
+}
+
 .side-bar-wrapper {
   overflow-y: scroll;
 
@@ -776,12 +797,6 @@ footer {
       display: block;
       margin-top: 1em;
       padding-right: 20px;
-
-      .horizontal-separator {
-        height: 2px;
-        background-color: $color-darker-salmon;
-        margin-bottom: 1em;
-      }
 
       .mobile-sobre-nos {
         display: block;
@@ -944,7 +959,8 @@ footer {
 .left-column-navbar {
   transition: transform 0.3s ease;
   background-color: #ffe5e2;
-  width: 15%;
+  min-width: 250px;
+  max-width: 80%;
   padding-left: 20px;
   position: absolute; // Position it absolutely
   top: 0; // Align it to the top
@@ -952,12 +968,12 @@ footer {
   height: 100%; // Full height to cover the viewport
   transform: translateX(-100%); // Ensure it starts off-screen on mobile
 
-  &.visible {
-    transform: translateX(0); // Slide into view on mobile
+  @media (max-width: 768px) {
+    min-width: 0;
   }
 
-  @media (max-width: 768px) {
-    width: 70%; // Full width to cover the content
+  &.visible {
+    transform: translateX(0); // Slide into view on mobile
   }
 }
 
