--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1116,3 +1116,10 @@ footer {
     opacity: 1;
   }
 }
+
+.image-caption {
+  text-align: right;
+  color: #666;
+  font-size: 0.7rem;
+  margin-top: 0;
+}
