--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -715,17 +715,14 @@ footer {
     grid-area: 8 / 3 / 12 / 5;
   }
   .div5 {
-    grid-area: 8 / 5 / 10 / 7;
-  }
-  .div6 {
-    grid-area: 10 / 5 / 12 / 7;
+    grid-area: 8 / 5 / 12 / 7;
   }
 }
 .small-grid {
-  width: 80vw;
+  width: 85vw;
   margin: 0 auto;
   display: grid;
-  margin-top: 7vh;
+  margin-top: 20px !important;
   margin-bottom: 7vh;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(4, 1fr);
@@ -759,6 +756,59 @@ footer {
   }
 }
 
+.medium-grid {
+  width: 85vw;
+  margin: 0 auto;
+  margin-top: 4vh;
+  margin-bottom: 0 !important;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); // Four equal columns
+  grid-template-rows: 1fr; // Single row
+  grid-gap: 20px;
+
+  .div1,
+  .div2,
+  .div3,
+  .div4 {
+    height: 40vh; // Equal height for all containers
+
+    img {
+      width: 100%;
+      height: 70%;
+      object-fit: cover;
+      object-position: center;
+      margin-bottom: 10px;
+    }
+  }
+
+  // Position the divs in the grid
+  .div1 {
+    grid-column: 1;
+  }
+  .div2 {
+    grid-column: 2;
+  }
+  .div3 {
+    grid-column: 3;
+  }
+  .div4 {
+    grid-column: 4;
+  }
+
+  @media (max-width: 768px) {
+    width: 92%;
+    display: block;
+
+    .div1,
+    .div2,
+    .div3,
+    .div4 {
+      width: 100%;
+      margin-bottom: 1em;
+      height: auto;
+    }
+  }
+}
 .horizontal-line-container {
   display: flex;
   align-items: center; // Vertically center the lines
@@ -1031,7 +1081,6 @@ footer {
   }
 
   .small-grid {
-    margin-top: 3vh;
     width: 92%;
     margin-bottom: 3vh;
   }
