--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -914,6 +914,7 @@ footer {
       .mobile-search {
         display: flex; // Ensure the search input and icon are inline
         align-items: center; // Center the input and icon vertically
+        margin-bottom: 20px;
 
         input {
           width: 0;
@@ -1065,12 +1066,16 @@ footer {
   position: absolute; // Position it absolutely
   top: 0; // Align it to the top
   left: 0; // Align it to the left
-  height: 100%; // Full height to cover the viewport
   transform: translateX(-100%); // Ensure it starts off-screen on mobile
   overflow-y: auto; // Make it scrollable
 
   @media (max-width: 768px) {
     min-width: 80%;
+    height: calc(100vh - #{$navbar-height-mobile}); // Mobile height
+  }
+
+  @media (min-width: 769px) {
+    height: calc(100vh - #{$navbar-height}); // Desktop height
   }
 
   &.visible {
