--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -674,7 +674,15 @@ footer {
   .div5,
   .div6,
   .div7,
-  .div8 {
+  .div8,
+  .div9,
+  .div10,
+  .div11,
+  .div12,
+  .div13,
+  .div14,
+  .div15,
+  .div16 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -854,7 +862,11 @@ footer {
   .div9,
   .div10,
   .div11,
-  .div12 {
+  .div12,
+  .div13,
+  .div14,
+  .div15,
+  .div16 {
     height: 40vh; // Equal height for all containers
     display: flex;
     flex-direction: column;
@@ -899,7 +911,11 @@ footer {
     .div9,
     .div10,
     .div11,
-    .div12 {
+    .div12,
+    .div13,
+    .div14,
+    .div15,
+    .div16 {
       width: 100%;
       margin-bottom: 1em;
       height: auto;
@@ -1208,7 +1224,15 @@ footer {
     .div5,
     .div6,
     .div7,
-    .div8 {
+    .div8,
+    .div9,
+    .div10,
+    .div11,
+    .div12,
+    .div13,
+    .div14,
+    .div15,
+    .div16 {
       width: 100%; // Full width for each item
       margin-bottom: 1em; // Add some space between items
       display: block;
