--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1353,6 +1353,10 @@ footer {
   display: block;
   width: 100%;
   height: 100%;
+
+  @media (max-width: 768px) {
+    cursor: pointer;
+  }
 }
 
 .magazine-dropdown-wrapper {
